upgraded to gradle 8